--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "serverless-http": "^3.0.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "license": "ISO"
