--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
     "netlify-lambda": "^2.0.15",
+    "nodemon": "^2.0.20",
     "serverless-http": "^3.0.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "license": "ISO"
