--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "14.x"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
