--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "serverless-http": "^3.0.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "license": "ISO"
